[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/spitter-sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Spitter.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="Animation" id=2]
resource_name = "spit"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.07, 0.23, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1, 0.63728, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.09, 0.23 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1.3, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="Spitter" type="KinematicBody2D"]
z_index = 1
collision_layer = 32
collision_mask = 37
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2, 0 )
texture = ExtResource( 1 )
vframes = 2
hframes = 4

[node name="AttackTimer" type="Timer" parent="."]

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.47

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spit = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 8 )
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
